css/app.css
/* ... */
.banana-yellow {
    background-color: #ffcf00;
}

.green-af {
    background-color:#24BC57;
}

.red-red {
    background-color: #e51f13;
}
@font-face {
    font-family: Sailec;
    src: url("../fonts/Sailec.otf") format("opentype");
}

@font-face {
    font-family: Sailec;
    font-weight: 500;
    src: url("../fonts/Sailec-Medium.otf") format("opentype");
}

@font-face {
    font-family: Sailec;
    font-weight: bold;
    src: url("../fonts/Sailec-Bold.otf") format("opentype");
}

@font-face {
    font-family: Sailec;
    font-weight: lighter;
    src: url("../fonts/Sailec-Light.otf") format("opentype");
}
body {
    user-select: none;
    background-color: whitesmoke; 
    font-family: Sailec !important;
}

img {
    pointer-events: none;
}

.navbar {
    background-color: white;
    padding: 0px 20px;
}

.navbar-section > a > img {
    height: 20px;
}

.landing {
    object-fit: contain;
    padding: 17vh 50px;
    background: linear-gradient(#FF8E2C, #FF5A81);
    color: white
}

.landing > h1 {
    font-size: 60px;
    font-weight: bold;
    letter-spacing: -1px;
}

.container:nth-child(odd) {
    background-color: whitesmoke;
}

.container {
    font-size: 19px;
}

.container > a {
    text-decoration: none !important;
}

.section {
    padding: none;
    margin: none;
    object-fit: contain;
}

.parallax-content {
    padding: 80px;
    height: 20vh;
}

.parallax-back > img {
    object-fit: contain;
    opacity: 0.8;
    margin: auto;
    height: 25vh;
    width: auto;
}

.parallax-front > h2 {
    color: white;
    font-weight: 500;
    padding: 50px;
}

.avatar > img {
    object-fit: contain;  
}

.avatar-lg {
    margin: 3px !important;
}

footer {
    padding: 20px 7vw;
    background-color: whitesmoke;
}

.padded {
    padding: 60px 0px;
}

.centered {
    text-align: center;
}
/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */

/**
 * 1. Set default font family to sans-serif.
 * 2. Prevent iOS and IE text size adjust after device orientation change,
 *    without disabling user zoom.
 */

html {
  font-family: sans-serif; /* 1 */
  -ms-text-size-adjust: 100%; /* 2 */
  -webkit-text-size-adjust: 100%; /* 2 */
}

/**
 * Remove default margin.
 */

body {
  margin: 0;
}

/* HTML5 display definitions
   ========================================================================== */

/**
 * Correct `block` display not defined for any HTML5 element in IE 8/9.
 * Correct `block` display not defined for `details` or `summary` in IE 10/11
 * and Firefox.
 * Correct `block` display not defined for `main` in IE 11.
 */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block;
}

/**
 * 1. Correct `inline-block` display not defined in IE 8/9.
 * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
 */

audio,
canvas,
progress,
video {
  display: inline-block; /* 1 */
  vertical-align: baseline; /* 2 */
}

/**
 * Prevent modern browsers from displaying `audio` without controls.
 * Remove excess height in iOS 5 devices.
 */

audio:not([controls]) {
  display: none;
  height: 0;
}

/**
 * Address `[hidden]` styling not present in IE 8/9/10.
 * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
 */

[hidden],
template {
  display: none;
}

/* Links
   ========================================================================== */

/**
 * Remove the gray background color from active links in IE 10.
 */

a {
  background-color: transparent;
}

/**
 * Improve readability of focused elements when they are also in an
 * active/hover state.
 */

a:active,
a:hover {
  outline: 0;
}

/* Text-level semantics
   ========================================================================== */

/**
 * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
 */

abbr[title] {
  border-bottom: 1px dotted;
}

/**
 * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
 */

b,
strong {
  font-weight: bold;
}

/**
 * Address styling not present in Safari and Chrome.
 */

dfn {
  font-style: italic;
}

/**
 * Address variable `h1` font-size and margin within `section` and `article`
 * contexts in Firefox 4+, Safari, and Chrome.
 */

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

/**
 * Address styling not present in IE 8/9.
 */

mark {
  background: #ff0;
  color: #000;
}

/**
 * Address inconsistent and variable font size in all browsers.
 */

small {
  font-size: 80%;
}

/**
 * Prevent `sub` and `sup` affecting `line-height` in all browsers.
 */

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

/* Embedded content
   ========================================================================== */

/**
 * Remove border when inside `a` element in IE 8/9/10.
 */

img {
  border: 0;
}

/**
 * Correct overflow not hidden in IE 9/10/11.
 */

svg:not(:root) {
  overflow: hidden;
}

/* Grouping content
   ========================================================================== */

/**
 * Address margin not present in IE 8/9 and Safari.
 */

figure {
  margin: 1em 40px;
}

/**
 * Address differences between Firefox and other browsers.
 */

hr {
  box-sizing: content-box;
  height: 0;
}

/**
 * Contain overflow in all browsers.
 */

pre {
  overflow: auto;
}

/**
 * Address odd `em`-unit font size rendering in all browsers.
 */

code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
/* ... */

